# deployment

./: .~lock.Rapport de stage.docx#  Rapport de stage.docx  check.py  itk_compile_instruction.txt  itk_install_instruction.txt  medipy_install.py  package  package_linux2.py  package_win32.py  psw.txt  unpack.py
OSX/: ITK_compile_error.txt  ITK_wrap_problems.txt  cmake_error.txt  cmake_fix.py  cmake_log.txt  error.txt  generators_build_log.txt  jenkins.txt  medipy_runtime_error.txt  setup.py
OSX/recipes/: itk.py  medipy.py
Rapport/: Instructions.pages  Rapport de stage.pages  presentation.key
itk_compile_log/ITK-MinGW/: cmake_change_log.txt  cmake_log.txt  error_debug.txt
itk_compile_log/ITK-Sandbox/: cmake_log.txt  error_list_debug.txt  output_debug.txt
itk_compile_log/ITK-VS2008/: cmake_log.txt  new_release_errors.txt  new_release_errors_projects.txt  new_release_output.txt  release_output.txt  release_warnings.txt
itk_compile_log/ITK-default/: cmake_log.txt  error_list_debug.txt  error_list_release.txt  output_debug.txt  output_release.txt
itk_compile_log/ITK/ITK-MinGW/: cmake_log.txt
itk_compile_log/ITK/ITK-Sandbox/: cmake_log.txt  error_list_debug.txt  output_debug.txt
itk_compile_log/ITK/ITK-VS2008/: cmake_log.txt  release_output.txt  release_warnings.txt
itk_compile_log/ITK/ITK-default/: cmake_log.txt  error_list_debug.txt  error_list_release.txt  output_debug.txt  output_release.txt
medipy_log/: Medipy.cmd  NSIS script.txt  VS2008-compile-debug.txt  cmake_debug.txt  cmake_patch_files.py  dcmtk_log.txt  dll files support.txt  envr.py  import_image_test.txt  jenkins.txt  lib_support.txt  medipy_patch_files.py  medipy_test_logs.txt  setup.py  setup_x64.nsi  setup_x64_new.nsi  setup_x86.nsi  unittests_log.txt  unittests_log.xml  vs2013_compile_test.txt  vtk_log.txt
medipy_log/cmake_fixed_files/: CMakeLists.txt  UseCython.cmake
medipy_log/cmake_fixed_files/dataset_io/: CMakeLists.txt
medipy_log/cmake_fixed_files/io_dicom/: CMakeLists.txt
medipy_log/cmake_fixed_files/lib-medipy-gui-image/: CMakeLists.txt
medipy_log/cmake_fixed_files/medimax_traitement/: CMakeLists.txt
medipy_log/cmake_fixed_files/network_dicom_scu/: CMakeLists.txt
medipy_log/cmake_fixed_files/plugins_hmc/: CMakeLists.txt
medipy_log/cmake_fixed_files/plugins_intensity/: CMakeLists.txt
medipy_log/cmake_fixed_files/plugins_medimax/: CMakeLists.txt
medipy_log/medipy_changed_files/: EM.cpp  HMCInitializer.cpp  HilbertCurveChainGenerator.txx  __init__.py  circle.py  detection.i  differential_bias_correction.c  encapsulated_document.py  explorer.py  float_interval.py  image.py  imx_misc.c  imx_sort.c  itkBETImageFilter.txx  itkBootstrapDWIStatisticsImageFilter.h  itkJointHistogramCalculator.txx  itkStreamlineTractographyAlgorithm.txx  medipy_app.py  recalage.i  scuexcept.h  square.py  test_bet.py  test_encapsulated_document.py  test_scu.py  test_siena.py  test_sienax.py  types.py  vtk_io.py  wxVTKRenderWindowInteractor.py
medipy_log/medipy_changed_files/win64/: itkSymmetryPlaneCalculator.txx
medipy_log/medipy_unittests_logs_old/: unittest_log.txt
